--- a/WebPortal/CSS/dashboard.css
+++ b/WebPortal/CSS/dashboard.css
@@ -2,10 +2,12 @@ body{
     height: 100vh;
     display: flex;
     flex-direction: column;
+    min-height: 0;
 }
 
 .mainPage
 {        
+    min-height: 0;
     transition: 0.5s ease-in-out;
 }
 
@@ -267,4 +269,5 @@ DASHBOARD CONTENT STYLING
 .dashContent{
     width: 100%;
     height: 100%;
+    min-height: 0;
 }
